Invitasjon/innkalling til møte i Hotellmotstandsgruppa i Kolabakkane'

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ node_modules/
 .hugo_build.lock
 hugo_stats.json
 package-lock.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
