--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/cli": "^4.0.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^24.10.0",
     "prettier": "^3.0.3",
     "prettier-plugin-go-template": "^0.0.15",
     "prettier-plugin-tailwindcss": "^0.5.6",
