--- a/data/home/hero.yaml
+++ b/data/home/hero.yaml
@@ -6,6 +6,10 @@ text: "Foreningen Midtskogen Vel verner og ivaretek friluftsomådet Midtskogen i
 
 image: "images/forside.png"
 
+importantTitle: "Les om invitasjon til møte i Hotellmotstandsgruppa i Kolabakkane"
+importantText: "Møtet finn stad i Vognhallen søndag den 16. november 2025 kl 18.00"
+importantLink: "/styret/2025-11-04---invitasjon---innkalling-til-mote-i-hotelmostandsgruppa/"
+
 items:
   - icon: "fas fa-handshake"
     color: "#4628A4"
